2000-03-29  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/gdk-pixbuf.c (gdk_pixbuf_get_has_alpha): Return
	gboolean instead of int.

2000-03-27  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/pixops.c: Fix problem with 
	precendence of >> and & which was keeping composite_color
	from working with non-gray images.

2000-03-08  Jonathan Blandford  <jrb@redhat.com>

	* gdk-pixbuf/io-gif.c (gdk_pixbuf__gif_image_load): free the context.
	(gdk_pixbuf__gif_image_load_animation): free the context.

2000-03-06  Arjan van de Ven <arjan@fenrus.demon.nl>

	* gdk-pixbuf/io-bmp.c: Fixed to pointer-bugs and a 
 	mis-interpretation of the Microsoft documentation. Now
  	it can load .BMP files that are not generated by The Gimp
 	as well.

2000-03-01  Mark Crichton  <crichton@gimp.org>

	* configure.in: Added BUILD_CANVAS_ITEM stuff to (finally)
	fix the last auto* build bug (where we have libart, but no
	gnome-libs)

	* gdk-pixbuf/Makefile.am: Same.

2000-02-28  Matt Wilson  <msw@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-drawable.c: s/unsigned long/guint32/g,
	s/unsigned short/guint16/g, s/unsigned char/guint8/g

2000-02-26  Federico Mena Quintero  <federico@helixcode.com>

	* README: We don't require libgif/ungif nor libXpm.

	* NEWS: This was outdated, so updated it.

2000-02-25  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf.m4: Use the correct name for
	gdk-pixbuf/gdk-pixbuf.h.  Thanks to Jacob Berkman for pointing
	this out.

2000-02-21  Federico Mena Quintero  <federico@helixcode.com>

	* configure.in (GDK_PIXBUF_MINOR): Bumped version number to 0.6.0.

	* doc/compiling.sgml: New appendix documenting the gdk-pixbuf
	library's particular options to configure.in.

	* doc/gdk-pixbuf.sgml: Include compiling.sgml appendix via an
	entity.

	* doc/Makefile.am (gdk-pixbuf.html): Added compiling.sgml.

	* gdk-pixbuf/io-ico.c (gdk_pixbuf__ico_image_load_increment):
	Fixed typo in prototype name.
